@startuml Loan State

title State Machine: Trạng thái Khoản vay

[*] --> PENDING : Đăng ký

PENDING --> APPROVED : Phê duyệt
PENDING --> REJECTED : Từ chối

APPROVED --> DISBURSED : Giải ngân
APPROVED --> REJECTED : Hủy

DISBURSED --> ACTIVE : Bắt đầu trả nợ

ACTIVE --> OVERDUE : Quá hạn >30 ngày
ACTIVE --> PAID_OFF : Trả hết

OVERDUE --> ACTIVE : Trả đủ tiền chậm
OVERDUE --> PAID_OFF : Trả hết

PAID_OFF --> [*]
REJECTED --> [*]

@enduml

